# rs-40

./: .gitignore  CMakeLists.txt  MANUAL.md  README.md
.github/workflows/: build.yml
Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RS40LookAndFeel.h
Source/DSP/: BiquadFilter.h  DiodeClipper.cpp  DiodeClipper.h  EQSection.cpp  EQSection.h  InputStage.h  OutputStage.cpp  OutputStage.h  Oversampling.h  RC4558Model.cpp  RC4558Model.h  RS40Channel.cpp  RS40Channel.h
